kubernetes/web/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "castle-app"
  namespace: "default"
  labels:
    app: "castle-app"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: "castle-app"
  template:
    metadata:
      labels:
        app: "castle-app"
    spec:
      hostNetwork: true
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "castle-app.com"
      containers:
        - name: "castle-app-web"
          image: "docker.castle-app-web:1.0.7"
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
